# snoopi

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml
.claude/: settings.local.json
backend/: auth.py  main.py  requirements.txt  users.json
backend/tests/: test_auth.py  test_main.py
docker/: cyclonedds.xml  entrypoint.sh  requirements-arm64.txt
docker/patches/: add_battery_publisher.py
docs/: development-guide.txt  hardware-validation.md  lab-setup-guide.md  project.md  raspberry-pi-checklist.md  system-communication-diagram.txt  testing-log.md
docs/plans/: 2026-02-25-docker-environment-design.md  2026-02-25-docker-environment-setup.md  2026-02-25-pre-robot-development.md  2026-03-05-real-robot-integration-design.md  2026-03-05-real-robot-integration-plan.md
scripts/: setup-pi-autostart.sh
src/snoopi_command_bridge/: package.xml  setup.cfg  setup.py
src/snoopi_command_bridge/snoopi_command_bridge/: command_bridge.py
src/snoopi_control/: package.xml  setup.cfg  setup.py
src/snoopi_control/snoopi_control/: autonomous_walk.py  basic_mover.py  following.py  patient_walk.py  safe_space.py  sample_move.py  sit_stand.py  snoopi_fixed.py
src/snoopi_control/snoopi_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/snoopi_control/snoopi_control/log/: latest_build
src/snoopi_mock/: package.xml  setup.cfg  setup.py
src/snoopi_mock/snoopi_mock/: mock_robot_publisher.py
src/snoopi_system_monitor/: package.xml  setup.cfg  setup.py
src/snoopi_system_monitor/snoopi_system_monitor/: system_monitor.py
src/snoopi_uwb/: package.xml  setup.cfg  setup.py
src/snoopi_uwb/snoopi_uwb/: uwb_reader.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  config.ts
ui/src/components/: AlertsPanel.tsx  ControlsCard.tsx  Header.tsx  RobotHealthCard.tsx  SystemHealthCard.tsx  TaskHistory.tsx  TelemetryGraphs.tsx  TuningCard.tsx
ui/src/hooks/: useRosbridge.ts  useTimeSeries.ts
ui/src/pages/: DashboardPage.tsx  LoginPage.tsx
