<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snoopi_uwb</name>
  <version>0.1.0</version>
  <description>UWB anchor reader — reads serial from USB anchors, publishes distance and status to ROS2 topics</description>
  <maintainer email="dev@snoopi.local">snoopi</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
